--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -334,7 +334,7 @@
          <bool>false</bool>
         </property>
         <property name="statusTip">
-         <string/>
+         <string>[Left Click] to merge values</string>
         </property>
         <property name="dragEnabled">
          <bool>false</bool>
@@ -378,6 +378,9 @@
         <property name="acceptDrops">
          <bool>false</bool>
         </property>
+        <property name="statusTip">
+         <string>[Left Click] to merge value</string>
+        </property>
         <property name="dragEnabled">
          <bool>false</bool>
         </property>
@@ -402,14 +405,14 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>25</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuSettings">
     <property name="title">
      <string>Settings</string>
     </property>
-    <addaction name="actionPerro"/>
+    <addaction name="accionPlaceHolder"/>
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
@@ -423,12 +426,20 @@
     </property>
     <addaction name="actionMerge"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionExpand_All"/>
+    <addaction name="actionCollapse_All"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuView"/>
    <addaction name="menuSettings"/>
    <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionPerro">
+  <action name="accionPlaceHolder">
    <property name="enabled">
     <bool>false</bool>
    </property>
@@ -447,6 +458,22 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+M</string>
+   </property>
+  </action>
+  <action name="actionExpand_All">
+   <property name="text">
+    <string>Expand All</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
+   </property>
+  </action>
+  <action name="actionCollapse_All">
+   <property name="text">
+    <string>Collapse All</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
    </property>
   </action>
  </widget>
