--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -315,31 +315,39 @@
      </layout>
     </item>
     <item>
-     <spacer name="spc_1">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Fixed</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>0</width>
-        <height>10</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item>
-     <layout class="QGridLayout" name="fields_selector" rowstretch="0,0">
+     <layout class="QGridLayout" name="fields_selector" rowstretch="0">
       <property name="sizeConstraint">
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <item row="1" column="1">
-       <widget class="UiListWidget" name="list_merged">
+      <item row="0" column="0">
+       <widget class="QTreeWidget" name="list_source">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="acceptDrops">
+         <bool>false</bool>
+        </property>
+        <property name="statusTip">
+         <string>[Left Click] to merge values</string>
+        </property>
+        <property name="dragEnabled">
+         <bool>false</bool>
+        </property>
+        <column>
+         <property name="text">
+          <string>Profile A</string>
+         </property>
+        </column>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="UiTreeWidget" name="list_merged">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -352,64 +360,15 @@
         <property name="statusTip">
          <string>[Right Click] to toggle values</string>
         </property>
-        <property name="uniformItemSizes">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QListWidget" name="list_target">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="acceptDrops">
-         <bool>false</bool>
-        </property>
-        <property name="dragEnabled">
-         <bool>false</bool>
-        </property>
-        <property name="uniformItemSizes">
-         <bool>true</bool>
-        </property>
+        <column>
+         <property name="text">
+          <string>Profile Merged</string>
+         </property>
+        </column>
        </widget>
       </item>
       <item row="0" column="2">
-       <widget class="QLabel" name="lbl_target_2">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>&lt;&lt; Profile B</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLabel" name="lbl_merged">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Profile Merged</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QListWidget" name="list_source">
+       <widget class="QTreeWidget" name="list_target">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -420,37 +379,22 @@
          <bool>false</bool>
         </property>
         <property name="statusTip">
-         <string/>
+         <string>[Left Click] to merge value</string>
         </property>
         <property name="dragEnabled">
          <bool>false</bool>
         </property>
-        <property name="uniformItemSizes">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="lbl_source_2">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Profile A &gt;&gt;</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
+        <column>
+         <property name="text">
+          <string>Profile B</string>
+         </property>
+        </column>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
    <zorder></zorder>
-   <zorder>spc_1</zorder>
    <zorder></zorder>
    <zorder></zorder>
    <zorder></zorder>
@@ -468,7 +412,7 @@
     <property name="title">
      <string>Settings</string>
     </property>
-    <addaction name="actionPerro"/>
+    <addaction name="accionPlaceHolder"/>
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
@@ -482,12 +426,20 @@
     </property>
     <addaction name="actionMerge"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionExpand_All"/>
+    <addaction name="actionCollapse_All"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuView"/>
    <addaction name="menuSettings"/>
    <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionPerro">
+  <action name="accionPlaceHolder">
    <property name="enabled">
     <bool>false</bool>
    </property>
@@ -508,12 +460,28 @@
     <string>Ctrl+M</string>
    </property>
   </action>
+  <action name="actionExpand_All">
+   <property name="text">
+    <string>Expand All</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
+   </property>
+  </action>
+  <action name="actionCollapse_All">
+   <property name="text">
+    <string>Collapse All</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>UiListWidget</class>
-   <extends>QListWidget</extends>
-   <header>UiListWidget.py</header>
+   <class>UiTreeWidget</class>
+   <extends>QTreeWidget</extends>
+   <header>UiTreeWidget.py</header>
   </customwidget>
  </customwidgets>
  <tabstops>
