--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -261,37 +261,7 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <item row="1" column="0">
-       <widget class="QTreeWidget" name="list_source">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="acceptDrops">
-         <bool>false</bool>
-        </property>
-        <property name="statusTip">
-         <string>[Left Click] to merge values</string>
-        </property>
-        <property name="styleSheet">
-         <string notr="true"/>
-        </property>
-        <property name="dragEnabled">
-         <bool>false</bool>
-        </property>
-        <column>
-         <property name="text">
-          <string>Profile A</string>
-         </property>
-         <property name="textAlignment">
-          <set>AlignLeading|AlignVCenter</set>
-         </property>
-        </column>
-       </widget>
-      </item>
-      <item row="1" column="1">
+      <item row="1" column="2">
        <widget class="UiTreeWidget" name="list_merged">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -315,7 +285,7 @@
         </column>
        </widget>
       </item>
-      <item row="1" column="2">
+      <item row="1" column="3">
        <widget class="QTreeWidget" name="list_target">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -339,7 +309,7 @@
         </column>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="0" column="2">
        <layout class="QHBoxLayout" name="layout_treeButtons">
         <property name="sizeConstraint">
          <enum>QLayout::SetDefaultConstraint</enum>
@@ -420,6 +390,36 @@
         </item>
        </layout>
       </item>
+      <item row="1" column="1">
+       <widget class="QTreeWidget" name="list_source">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="acceptDrops">
+         <bool>false</bool>
+        </property>
+        <property name="statusTip">
+         <string>[Left Click] to merge values</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+        <property name="dragEnabled">
+         <bool>false</bool>
+        </property>
+        <column>
+         <property name="text">
+          <string>Profile A</string>
+         </property>
+         <property name="textAlignment">
+          <set>AlignLeading|AlignVCenter</set>
+         </property>
+        </column>
+       </widget>
+      </item>
      </layout>
     </item>
     <item>
@@ -496,6 +496,8 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionOpenProfileA"/>
+    <addaction name="actionOpenProfileB"/>
     <addaction name="actionMerge"/>
    </widget>
    <widget class="QMenu" name="menuView">
@@ -585,6 +587,25 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+2</string>
+   </property>
+  </action>
+  <action name="actionOpenProfileA">
+   <property name="text">
+    <string>Open Profile A</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+1</string>
+   </property>
+  </action>
+  <action name="actionOpenProfileB">
+   <property name="text">
+    <string>Open Profile B</string>
+   </property>
+   <property name="toolTip">
+    <string>Open Profile B</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+2</string>
    </property>
   </action>
  </widget>
