--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -20,7 +20,7 @@
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QWidget" name="layout_main">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -153,108 +153,144 @@
      </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="layout_source">
-      <property name="spacing">
-       <number>6</number>
+     <layout class="QHBoxLayout" name="layout_profiles" stretch="0,0,0">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetDefaultConstraint</enum>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
       </property>
       <item>
-       <widget class="QLabel" name="lbl_source">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+       <layout class="QHBoxLayout" name="layout_a">
+        <property name="spacing">
+         <number>6</number>
         </property>
-        <property name="minimumSize">
-         <size>
-          <width>50</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Profile A</string>
-        </property>
-       </widget>
+        <item>
+         <widget class="QLabel" name="lbl_a">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Profile A</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="le_a">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="btn_a">
+          <property name="statusTip">
+           <string>Load Profile A</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item>
-       <widget class="QLineEdit" name="le_source">
-        <property name="enabled">
-         <bool>true</bool>
+       <widget class="QToolButton" name="btn_merge_dir">
+        <property name="toolTip">
+         <string>This will determine which profile values will take priority while merging</string>
         </property>
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="btn_source">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="layout_selector">
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="lbl_target">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>50</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Profile B</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="le_target">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="echoMode">
-         <enum>QLineEdit::Normal</enum>
-        </property>
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="btn_target">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+        <property name="statusTip">
+         <string>Change merge direction</string>
         </property>
         <property name="text">
          <string>...</string>
         </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons/arrow-left.svg</normaloff>icons/arrow-left.svg</iconset>
+        </property>
        </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="layout_b">
+        <property name="spacing">
+         <number>6</number>
+        </property>
+        <item>
+         <widget class="QToolButton" name="btn_b">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="statusTip">
+           <string>Load Profile B</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="le_b">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="echoMode">
+           <enum>QLineEdit::Normal</enum>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="lbl_b">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Profile B</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
     <item>
-     <layout class="QGridLayout" name="fields_selector" rowstretch="0,0">
+     <layout class="QGridLayout" name="layout_merger" rowstretch="0,0">
       <property name="sizeConstraint">
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
@@ -262,7 +298,7 @@
        <number>0</number>
       </property>
       <item row="1" column="2">
-       <widget class="UiTreeWidget" name="list_merged">
+       <widget class="UiTreeWidget" name="tree_merged">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -273,7 +309,7 @@
          <bool>false</bool>
         </property>
         <property name="statusTip">
-         <string>[Right Click] to toggle values</string>
+         <string>[Right Click] to toggle values | [Left Click] Ignore field in merge</string>
         </property>
         <column>
          <property name="text">
@@ -286,7 +322,7 @@
        </widget>
       </item>
       <item row="1" column="3">
-       <widget class="QTreeWidget" name="list_target">
+       <widget class="QTreeWidget" name="tree_b">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -297,7 +333,7 @@
          <bool>false</bool>
         </property>
         <property name="statusTip">
-         <string>[Left Click] to merge value</string>
+         <string>[Left Click] to merge Profile B value</string>
         </property>
         <property name="dragEnabled">
          <bool>false</bool>
@@ -305,6 +341,9 @@
         <column>
          <property name="text">
           <string>Profile B</string>
+         </property>
+         <property name="textAlignment">
+          <set>AlignCenter</set>
          </property>
         </column>
        </widget>
@@ -316,6 +355,9 @@
         </property>
         <item>
          <widget class="QToolButton" name="btn_applyA">
+          <property name="statusTip">
+           <string>Apply all A values</string>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
@@ -327,7 +369,7 @@
          </widget>
         </item>
         <item>
-         <spacer name="horizontalSpacer">
+         <spacer name="spc_m_l">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -341,6 +383,9 @@
         </item>
         <item>
          <widget class="QToolButton" name="btn_expandAll">
+          <property name="statusTip">
+           <string>Expand All Categories</string>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
@@ -353,6 +398,9 @@
         </item>
         <item>
          <widget class="QToolButton" name="btn_collapseAll">
+          <property name="statusTip">
+           <string>Collapse All Categories</string>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
@@ -364,7 +412,7 @@
          </widget>
         </item>
         <item>
-         <spacer name="spc_treeButtons">
+         <spacer name="scp_m_r">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -378,6 +426,9 @@
         </item>
         <item>
          <widget class="QToolButton" name="btn_applyB">
+          <property name="statusTip">
+           <string>Apply all B values</string>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
@@ -391,7 +442,7 @@
        </layout>
       </item>
       <item row="1" column="1">
-       <widget class="QTreeWidget" name="list_source">
+       <widget class="QTreeWidget" name="tree_a">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -402,7 +453,7 @@
          <bool>false</bool>
         </property>
         <property name="statusTip">
-         <string>[Left Click] to merge values</string>
+         <string>[Left Click] to merge Profile A value</string>
         </property>
         <property name="styleSheet">
          <string notr="true"/>
@@ -415,7 +466,7 @@
           <string>Profile A</string>
          </property>
          <property name="textAlignment">
-          <set>AlignLeading|AlignVCenter</set>
+          <set>AlignCenter</set>
          </property>
         </column>
        </widget>
@@ -468,8 +519,6 @@
    <zorder></zorder>
    <zorder></zorder>
    <zorder></zorder>
-   <zorder></zorder>
-   <zorder></zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -498,6 +547,7 @@
     </property>
     <addaction name="actionOpenProfileA"/>
     <addaction name="actionOpenProfileB"/>
+    <addaction name="separator"/>
     <addaction name="actionMerge"/>
    </widget>
    <widget class="QMenu" name="menuView">
@@ -530,6 +580,9 @@
    </property>
   </action>
   <action name="actionAbout">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>About</string>
    </property>
@@ -542,7 +595,7 @@
     <string>Create merged profile and save</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+M</string>
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionExpand_All">
@@ -618,7 +671,19 @@
  </customwidgets>
  <tabstops>
   <tabstop>cmb_api</tabstop>
-  <tabstop>btn_target</tabstop>
+  <tabstop>le_a</tabstop>
+  <tabstop>btn_a</tabstop>
+  <tabstop>btn_merge_dir</tabstop>
+  <tabstop>btn_b</tabstop>
+  <tabstop>le_b</tabstop>
+  <tabstop>btn_applyA</tabstop>
+  <tabstop>btn_expandAll</tabstop>
+  <tabstop>btn_collapseAll</tabstop>
+  <tabstop>btn_applyB</tabstop>
+  <tabstop>tree_a</tabstop>
+  <tabstop>tree_merged</tabstop>
+  <tabstop>tree_b</tabstop>
+  <tabstop>btn_start</tabstop>
  </tabstops>
  <resources/>
  <connections/>
