Redesign and code refactor
- Major redesign, removed references to source and target allowing better flexibility
- Added a little bit of documentation

--- a/ui/stylesheet.css
+++ b/ui/stylesheet.css
@@ -2,13 +2,13 @@ QToolButton#btn_applyA {
     background-color: #ffaa00;
 }
 
-QLabel#lbl_source {
+QLabel#lbl_a {
     background-color: #ffaa00;
     border: 1px solid #32414b;
     border-radius: 4px;
 }
 
-QTreeWidget#list_source QHeaderView::section {
+QTreeWidget#tree_a QHeaderView::section {
     background-color: #ffaa00;
 }
 
@@ -17,12 +17,12 @@ QToolButton#btn_applyB {
     background-color: #aa00ff;
 }
 
-QLabel#lbl_target {
+QLabel#lbl_b {
     background-color: #aa00ff;
     border: 1px solid #32414b;
     border-radius: 4px;
 }
 
-QTreeWidget#list_target QHeaderView::section {
+QTreeWidget#tree_b QHeaderView::section {
     background-color: #aa00ff;
 }
