--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -195,6 +195,20 @@
          </widget>
         </item>
         <item>
+         <widget class="QToolButton" name="btn_close_a">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>icons/x.svg</normaloff>icons/x.svg</iconset>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QToolButton" name="btn_a">
           <property name="statusTip">
            <string>Load Profile A</string>
@@ -241,6 +255,20 @@
           </property>
           <property name="text">
            <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="btn_close_b">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>icons/x.svg</normaloff>icons/x.svg</iconset>
           </property>
          </widget>
         </item>
@@ -297,30 +325,6 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <item row="1" column="2">
-       <widget class="UiTreeWidget" name="tree_merged">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="acceptDrops">
-         <bool>false</bool>
-        </property>
-        <property name="statusTip">
-         <string>[Right Click] to toggle values | [Left Click] Ignore field in merge</string>
-        </property>
-        <column>
-         <property name="text">
-          <string>Profile Merged</string>
-         </property>
-         <property name="textAlignment">
-          <set>AlignCenter</set>
-         </property>
-        </column>
-       </widget>
-      </item>
       <item row="1" column="3">
        <widget class="QTreeWidget" name="tree_b">
         <property name="sizePolicy">
@@ -341,6 +345,60 @@
         <column>
          <property name="text">
           <string>Profile B</string>
+         </property>
+         <property name="textAlignment">
+          <set>AlignCenter</set>
+         </property>
+        </column>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QTreeWidget" name="tree_a">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="acceptDrops">
+         <bool>false</bool>
+        </property>
+        <property name="statusTip">
+         <string>[Left Click] to merge Profile A value</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+        <property name="dragEnabled">
+         <bool>false</bool>
+        </property>
+        <column>
+         <property name="text">
+          <string>Profile A</string>
+         </property>
+         <property name="textAlignment">
+          <set>AlignCenter</set>
+         </property>
+        </column>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="UiTreeWidget" name="tree_merged">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="acceptDrops">
+         <bool>false</bool>
+        </property>
+        <property name="statusTip">
+         <string>[Right Click] to toggle values | [Left Click] Ignore field in merge</string>
+        </property>
+        <column>
+         <property name="text">
+          <string>Profile Merged</string>
          </property>
          <property name="textAlignment">
           <set>AlignCenter</set>
@@ -441,36 +499,6 @@
         </item>
        </layout>
       </item>
-      <item row="1" column="1">
-       <widget class="QTreeWidget" name="tree_a">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="acceptDrops">
-         <bool>false</bool>
-        </property>
-        <property name="statusTip">
-         <string>[Left Click] to merge Profile A value</string>
-        </property>
-        <property name="styleSheet">
-         <string notr="true"/>
-        </property>
-        <property name="dragEnabled">
-         <bool>false</bool>
-        </property>
-        <column>
-         <property name="text">
-          <string>Profile A</string>
-         </property>
-         <property name="textAlignment">
-          <set>AlignCenter</set>
-         </property>
-        </column>
-       </widget>
-      </item>
      </layout>
     </item>
     <item>
@@ -526,7 +554,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>20</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuSettings">
