--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -222,6 +222,12 @@
       </item>
       <item>
        <widget class="QToolButton" name="btn_merge_dir">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>25</height>
+         </size>
+        </property>
         <property name="toolTip">
          <string>This will determine which profile values will take priority while merging</string>
         </property>
